--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p id="save-el">Data Kunjungan: {{ saveCount }}</p>
         <button @click="deleteData">DELETE DATA</button>
     </div>
-    <script src="https://unpkg.com/vue@3.1.1"></script>
+    <script src="https://unpkg.com/vue@3.1.1/dist/vue.global.prod.js"></script>
     <script src="assets/script.js"></script>
     <!-- <script src="count.js"></script> -->
 </body>
